@@ -1,5 +1,12 @@
 2009-03-30  Bob Halley  <halley@dnspython.org>
 
+	* Add "one_rr_per_rrset" mode switch to methods which parse
+	  messages from wire format (e.g. dns.message.from_wire(),
+	  dns.query.udp(), dns.query.tcp()).  If set, each RR read is
+	  placed in its own RRset (instead of being coalesced).
+
+2009-03-30  Bob Halley  <halley@dnspython.org>
+
 	* Added EDNS option support.
 
 2008-10-16  Bob Halley  <halley@dnspython.org>
